# temp

./: Cargo.toml  ReadMe.md  output.txt
src/: lib.rs  main.rs  params.rs  routes.rs  types.rs  utils.rs  views.rs
src/file_types/: classes.rs  mod.rs
tests/resources/default_test_case/: test.routes
tests/resources/default_test_case/app/controllers/: application_controller.rb  pages_controller.rb
tests/resources/default_test_case/app/controllers/concerns/: ErrorHandling.rb  HttpResponse.rb
tests/resources/default_test_case/app/helpers/: PageHelper.rb
tests/resources/default_test_case/app/views/pages/: show.jbuilder
tests/resources/default_test_case/config/: routes.rb
