[package]
name = "rts"
version = "0.1.0"
authors = ["joe.ling"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lib-ruby-parser = "3.0.0"
walkdir = "2"
argh = "0.1.4"
convert_case = "0.4.0"

[dev-dependencies]
pretty_assertions = "0.6.1"